RenderResearchProject/RenderSource/RenderProgramDLL/RenderProgramDLL.h

	//screen functions
	_RENDER_PROGRAM_DLL_H_ Screen* CreateScreen(int width, int height);
	_RENDER_PROGRAM_DLL_H_ void ScreenSetParameters(Screen* screen);
	_RENDER_PROGRAM_DLL_H_ bool ScreenShouldClose(Screen* screen);
	_RENDER_PROGRAM_DLL_H_ void ScreenUpdate(Screen* screen);
	_RENDER_PROGRAM_DLL_H_ void ScreenNewFrame(Screen* screen);
	_RENDER_PROGRAM_DLL_H_ void ScreenTerminate(Screen* screen);
	_RENDER_PROGRAM_DLL_H_ void ScreenProcessInput(Screen* screen);
	_RENDER_PROGRAM_DLL_H_ void SetClearColor(Screen* screen,float* clearColor);
	_RENDER_PROGRAM_DLL_H_ float ScreenGetWidth(Screen* screen);
	_RENDER_PROGRAM_DLL_H_ float ScreenGetHeight(Screen* screen);
	//shader functions
	_RENDER_PROGRAM_DLL_H_ Shader* NewShader(const char* vertexShaderPath, const char* fragShaderPath);
	_RENDER_PROGRAM_DLL_H_ void ShaderSetInt(Shader* shader, const char* name, int value);
	_RENDER_PROGRAM_DLL_H_ void ShaderSetFloat(Shader* shader, const char* name, float value);
	_RENDER_PROGRAM_DLL_H_ void ShaderSet3Float(Shader* shader, const char* name, float value, float value1, float value2);
	_RENDER_PROGRAM_DLL_H_ void ShaderSet4Float(Shader* shader, const char* name, float value, float value1, float value2, float value3);
	_RENDER_PROGRAM_DLL_H_ void ShaderSetBool(Shader* shader, const char* name, bool value);
	_RENDER_PROGRAM_DLL_H_ void ShaderSetMat4(Shader* shader, const char* name, glm::mat4* val);
	_RENDER_PROGRAM_DLL_H_ void ShaderActivate(Shader* shader);
	//Texture functions
	_RENDER_PROGRAM_DLL_H_ Texture* NewTexture(const char* directory, const char* name, int type);
	_RENDER_PROGRAM_DLL_H_ void TextureLoad(Texture* texture, bool flip);
	_RENDER_PROGRAM_DLL_H_ void TextureSetWrapParameters(Texture* texture, int wrapSParameter, int wrapTParameter);
	//Mesh functions
	_RENDER_PROGRAM_DLL_H_ Mesh* CreateMesh();
	_RENDER_PROGRAM_DLL_H_ void MeshSetVerticesPos(Mesh* mesh, float* pos, int sizeOfVertices);
	_RENDER_PROGRAM_DLL_H_ void MeshSetIndices(Mesh* mesh, int* indices);
	_RENDER_PROGRAM_DLL_H_ void MeshSetVerticesNormal(Mesh* mesh, float* normal);
	_RENDER_PROGRAM_DLL_H_ void MeshSetVerticesTexCoord(Mesh* mesh, float* texCoord);
	_RENDER_PROGRAM_DLL_H_ void MeshGetVerticesPos(Mesh* mesh, float* pos);
	_RENDER_PROGRAM_DLL_H_ void MeshGetIndices(Mesh* mesh, int* indices);
	_RENDER_PROGRAM_DLL_H_ void MeshGetVerticesNormal(Mesh* mesh, float* normal);
	_RENDER_PROGRAM_DLL_H_ void MeshGetVerticesTexCoord(Mesh* mesh, float* texCoord);
	
	//modelloader functions
	_RENDER_PROGRAM_DLL_H_ Model* LoadModel(const char* path);
	//model functions
	_RENDER_PROGRAM_DLL_H_ int GetModelChilCount(Model* model);
	_RENDER_PROGRAM_DLL_H_ int GetMeshCount(Model* model);
	_RENDER_PROGRAM_DLL_H_ int GetMaterialCount(Model* model);
	_RENDER_PROGRAM_DLL_H_ Mesh* GetIdxMeshesFromModel(Model* model, int idx);
	_RENDER_PROGRAM_DLL_H_ Material* GetIdxMaterialFromModel(Model* model, int idx);
	_RENDER_PROGRAM_DLL_H_ Model* GetChildModel(Model* model, int idx);
	_RENDER_PROGRAM_DLL_H_ int GetTotalMeshCount(Model* model);
	_RENDER_PROGRAM_DLL_H_ int GetTotalMaterialCount(Model* model);
	//animation functions
	_RENDER_PROGRAM_DLL_H_ Animation* GetAnimationFromPath(const char* animationPath, Model* model);
	_RENDER_PROGRAM_DLL_H_ Animator* NewAnimator(Animation* animation);
	_RENDER_PROGRAM_DLL_H_ void UpdateAnimation(Animator* animator, float dt);
	_RENDER_PROGRAM_DLL_H_ void SetBoneMatrixToShader(Animator* animator, Shader* shader);
	//input functions
	_RENDER_PROGRAM_DLL_H_ bool GetKeyDown(int keyCode);
	_RENDER_PROGRAM_DLL_H_ bool GetKeyUp(int keyCode);
	_RENDER_PROGRAM_DLL_H_ bool GetKey(int keyCode);
	_RENDER_PROGRAM_DLL_H_ bool GetMouseKeyDown(int keyCode);
	_RENDER_PROGRAM_DLL_H_ bool GetMouseKeyUp(int keyCode);
	_RENDER_PROGRAM_DLL_H_ bool GetMouseKey(int keyCode);
	_RENDER_PROGRAM_DLL_H_ double GetMouseX();
	_RENDER_PROGRAM_DLL_H_ double GetMouseY();
	_RENDER_PROGRAM_DLL_H_ double GetDx();
	_RENDER_PROGRAM_DLL_H_ double GetDy();
	_RENDER_PROGRAM_DLL_H_ double GetScrollDx();
	_RENDER_PROGRAM_DLL_H_ double GetScrollDy();
	//GLMatrix functions
	_RENDER_PROGRAM_DLL_H_ glm::mat4* ReturnMat4(float value);
	_RENDER_PROGRAM_DLL_H_ glm::mat3* ReturnMat3(float value);
	_RENDER_PROGRAM_DLL_H_ glm::mat4* ReturnMat4FromMat4(glm::mat4* mat4);
	

	//GLMath functions
	_RENDER_PROGRAM_DLL_H_ glm::mat4* LookAt(float* cameraPos, float* cameraFront, float* cameraUp);
	_RENDER_PROGRAM_DLL_H_ glm::mat4* Perspective(float fovy, float aspect, float near, float far);
	_RENDER_PROGRAM_DLL_H_ glm::mat4* Orthographic();
	_RENDER_PROGRAM_DLL_H_ void Rotate(glm::mat4* modelMatrix, float degree, float* axisOfRotation, float* newDirection);
	_RENDER_PROGRAM_DLL_H_ void GetRayFromScreenSpace(float* screenPos, glm::mat4 projectionMat, glm::mat4 viewMat, float width, float height, float* result);
	//Material functions
	_RENDER_PROGRAM_DLL_H_ Material* NewLitMaterial();
	_RENDER_PROGRAM_DLL_H_ void SetShaderToMaterial(Material* material, Shader* shader);
	_RENDER_PROGRAM_DLL_H_ Shader* GetShaderFromMaterial(Material* material);
	_RENDER_PROGRAM_DLL_H_ void SetAmbientToMaterial(LitMaterial* material,float* ambient);
	_RENDER_PROGRAM_DLL_H_ void SetDiffuseToMaterial(LitMaterial* material,float* diffuse);
	_RENDER_PROGRAM_DLL_H_ void SetSpecularToMaterial(LitMaterial* material,float* specular);
	_RENDER_PROGRAM_DLL_H_ void SetShininessToMaterial(LitMaterial* material,float shininess);
	_RENDER_PROGRAM_DLL_H_ void GetAmbientFromMaterial(LitMaterial* material, float* ambient);
	_RENDER_PROGRAM_DLL_H_ void GetDiffuseFromMaterial(LitMaterial* material, float* diffuse);